# halveth-tresor

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_NOTES.md  RELEASE_NOTES_v1.0.0.md  SECURITY.md  THIRD-PARTY-LICENSES.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  codeql.yml
docs/: security-model.md
packaging/: tresor.spec
scripts/: build.bat  make_icon.py
src/tresor/: __init__.py  __main__.py  app.py  clipboard_win.py  vault.py
src/tresor/ui/: index.html
tests/: test_app_backup.py  test_vault.py
tests/e2e/: native_smoke.py
